--- a/druby.conf
+++ b/druby.conf
@@ -14,10 +14,10 @@ dr-profile = false
 dr-profile-db = druby_profile.db
 
 # The location of the base_types.rb file and other stub files
-dr-stub-dir = /opt/boxen/rbenv/versions/2.3.1/lib/ruby/druby/2.3.0
+dr-stub-dir = stubs/2.3
 
 # After analysis, execute the given file with the ruby interpreter
-dr-run-ruby = false 
+dr-run-ruby = false
 
 
 #########################################
@@ -34,10 +34,10 @@ dr-emit-runtime-casts = false
 dr-check-annotations = true
 
 # produce (lots) of debugging info for the constraint solver
-dr-debug-constraints = false 
+dr-debug-constraints = false
 
 # controls the amount of debugging information, 0 => none
-dr-debug-level = 0 
+dr-debug-level = 0
 
 # Never print the same error twice
 dr-no-dup-errors = true
@@ -46,7 +46,7 @@ dr-no-dup-errors = true
 dr-print-error-ctx = true
 
 # print out filenames as they are parsed
-dr-print-filenames = false  
+dr-print-filenames = false
 
 # statically resolve the scope of all constants
 dr-resolve-scopes = true
